<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/news_feed"
        android:title="@string/title_news"
        android:enabled="true"
        android:icon="@drawable/ic_public">

    </item>


    <item
        android:id="@+id/schemes"
        android:title="@string/title_schemes"
        android:enabled="true"
        android:icon="@drawable/ic_business">

    </item>


    <item
        android:id="@+id/advisor"
        android:title="@string/title_advisor"
        android:icon="@drawable/ic_people"
        android:enabled="true" >

    </item>


    <item
        android:id="@+id/products"
        android:title="@string/title_ecommerce"
        android:enabled="true"
        android:icon="@drawable/ic_local_florist">
    </item>


    <item
        android:id="@+id/profile"
        android:title="@string/title_profile"
        android:enabled="true"
        android:icon="@drawable/ic_person">

    </item>


</menu>